# lise-orchestrator-desktop

./: README.md  main.spec  package-lock.json  package.json  test_websocket.html
orchestrator/: lise-orchestrator.spec  main.py  main.spec  requirements.txt
orchestrator/scenarios/: Dockerfile  start_vm.sh  test-scenario.yaml  vulnerable_app.py  web-injection-scenario.yaml
orchestrator/static/: index.html
src/: index.html  main.js
src-tauri/: Cargo.toml  main.py  tauri.conf.json
src-tauri/src/: main.rs
